fixing POSTS text alignment

--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -149,7 +149,7 @@ canvas {
 }
 
 .posts-link {
-  right: 20px; //90px;
+  right: 30px; //90px;
 }
 /*
 .projects-link {
